diesel_compile_tests/tests/fail/derive/bad_insertable.stderr
error[E0277]: the trait bound `std::string::String: diesel::Expression` is not satisfied
  --> tests/fail/derive/bad_insertable.rs:12:5
   |
12 |     id: String,
   |     ^^ the trait `diesel::Expression` is not implemented for `std::string::String`
   |
   = help: the following other types implement trait `diesel::Expression`:
             Box<T>
             columns::name
             columns::id
             columns::star
             diesel::expression::ops::numeric::Add<Lhs, Rhs>
             diesel::expression::ops::numeric::Sub<Lhs, Rhs>
             diesel::expression::ops::numeric::Mul<Lhs, Rhs>
             diesel::expression::ops::numeric::Div<Lhs, Rhs>
           and $N others
   = note: required for `std::string::String` to implement `AsExpression<diesel::sql_types::Integer>`

error[E0277]: the trait bound `i32: diesel::Expression` is not satisfied
  --> tests/fail/derive/bad_insertable.rs:13:5
   |
13 |     name: i32,
   |     ^^^^ the trait `diesel::Expression` is not implemented for `i32`
   |
   = help: the following other types implement trait `diesel::Expression`:
             Box<T>
             columns::name
             columns::id
             columns::star
             diesel::expression::ops::numeric::Add<Lhs, Rhs>
             diesel::expression::ops::numeric::Sub<Lhs, Rhs>
             diesel::expression::ops::numeric::Mul<Lhs, Rhs>
             diesel::expression::ops::numeric::Div<Lhs, Rhs>
           and $N others
   = note: required for `i32` to implement `AsExpression<diesel::sql_types::Text>`

error[E0277]: the trait bound `std::string::String: diesel::Expression` is not satisfied
  --> tests/fail/derive/bad_insertable.rs:12:5
   |
12 |     id: String,
   |     ^^ the trait `diesel::Expression` is not implemented for `std::string::String`
   |
   = help: the following other types implement trait `diesel::Expression`:
             Box<T>
             columns::name
             columns::id
             columns::star
             diesel::expression::ops::numeric::Add<Lhs, Rhs>
             diesel::expression::ops::numeric::Sub<Lhs, Rhs>
             diesel::expression::ops::numeric::Mul<Lhs, Rhs>
             diesel::expression::ops::numeric::Div<Lhs, Rhs>
           and $N others
   = note: required for `&'insert std::string::String` to implement `diesel::Expression`
   = note: required for `&'insert std::string::String` to implement `AsExpression<diesel::sql_types::Integer>`

error[E0277]: the trait bound `i32: diesel::Expression` is not satisfied
  --> tests/fail/derive/bad_insertable.rs:13:5
   |
13 |     name: i32,
   |     ^^^^ the trait `diesel::Expression` is not implemented for `i32`
   |
   = help: the following other types implement trait `diesel::Expression`:
             Box<T>
             columns::name
             columns::id
             columns::star
             diesel::expression::ops::numeric::Add<Lhs, Rhs>
             diesel::expression::ops::numeric::Sub<Lhs, Rhs>
             diesel::expression::ops::numeric::Mul<Lhs, Rhs>
             diesel::expression::ops::numeric::Div<Lhs, Rhs>
           and $N others
   = note: required for `&'insert i32` to implement `diesel::Expression`
   = note: required for `&'insert i32` to implement `AsExpression<diesel::sql_types::Text>`
